<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="about_page_link_open_source_license">Open source license</string>
    <string name="about_page_link_permissions">Permissions</string>
    <string name="about_page_version">Version %s</string>
    <string name="about_permissions_title">Permissions</string>
    <string name="about_smart_view_title">About Smart View</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_cast_allow_all_apps_check_box">Allow all apps to be cast</string>
    <string name="app_cast_back_button">Back</string>
    <string name="app_cast_expand_button">Expand</string>
    <string name="app_cast_expand_toast">App casting ended. Casting entire screen.</string>
    <string name="app_cast_full_screen_toast">Open app in full screen first to cast it.</string>
    <string name="app_cast_full_screen_toast_home">Open an app in full screen first to cast it.</string>
    <string name="app_cast_information_content_pop_up">App cast lets you show just one app on your TV while you use different apps on your phone.</string>
    <string name="app_cast_information_content_pop_up_tablet">App cast lets you show just one app on your TV while you use different apps on your tablet.</string>
    <string name="app_cast_labs_description_text">You can allow all apps to be cast, but some apps might not work correctly.</string>
    <string name="app_cast_labs_link">Learn more in Labs</string>
    <string name="app_cast_minimize_button">Minimize</string>
    <string name="app_cast_not_allowed_toast">This app may not work correctly while being cast.</string>
    <string name="app_cast_not_support_toast">"Casting isn't supported for this app."</string>
    <string name="app_cast_ok_button">OK</string>
    <string name="app_cast_stopped_by_high_temperature">App cast stopped</string>
    <string name="app_cast_stopped_by_high_temperature_description">Your phone is too hot. Let it cool down before casting an app.</string>
    <string name="app_cast_supported_app_Chrome">Chrome</string>
    <string name="app_cast_supported_app_Disney_Plus">Disney+</string>
    <string name="app_cast_supported_app_Google_TV">Google TV</string>
    <string name="app_cast_supported_app_Netflix">Netflix</string>
    <string name="app_cast_supported_app_Samsung_Browser">Internet</string>
    <string name="app_cast_supported_app_Samsung_Health">Samsung Health</string>
    <string name="app_cast_supported_app_Twitch">Twitch</string>
    <string name="app_cast_supported_app_Youtube">Youtube</string>
    <string name="app_cast_supported_app_list_description">Open one of following apps in full screen to cast.</string>
    <string name="app_cast_tutorial">App cast lets you show just one app on your TV while you use different apps on your phone.</string>
    <string name="app_cast_tutorial_info" formatted="false">Cast %s only lets you show just %s on your TV while you use different apps on your phone.</string>
    <string name="app_cast_tutorial_tablet">App cast lets you show just one app on your TV while you use different apps on your tablet.</string>
    <string name="app_info">APP INFO</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="aspect_ratio_button_description">Change the aspect ratio of your phone to match the connected device.</string>
    <string name="aspect_ratio_button_description_tablet">Change the aspect ratio of your tablet to match the connected device.</string>
    <string name="aspect_ratio_page_full_screen_on_connected_device">Full screen on connected device</string>
    <string name="aspect_ratio_page_full_screen_on_phone">Full screen on phone</string>
    <string name="aspect_ratio_page_full_screen_on_tablet">Full screen on tablet</string>
    <string name="aspect_ratio_page_guide_full_screen_on_connected_device_description">Black bars will appear on your phone.</string>
    <string name="aspect_ratio_page_guide_full_screen_on_connected_device_description_tablet">Black bars will appear on your tablet.</string>
    <string name="aspect_ratio_page_guide_full_screen_on_phone_description">Black bars will appear on the connected device.</string>
    <string name="aspect_ratio_page_remember_option">Remember settings</string>
    <string name="aspect_ratio_page_title">Set aspect ratio</string>
    <string name="back_key_infromation">Press Back button again to go back to previous screen.</string>
    <string name="black_screen_no_title">No title</string>
    <string name="black_screen_swipe_text">Swipe screen or press %s</string>
    <string name="body_are_you_signed_in">Signing in to your Samsung account on your TV may be required to use Smart View.</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bt_subtext_connection_failed">"Couldn't connect"</string>
    <string name="bubble_help_expander">Tap to play something else.</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="cant_connect_SA_description">Sign in to your Samsung account on our TV, then try again.</string>
    <string name="cant_connect_dialog_description">"Your phone is blocked by the TV you're trying to connect to. Unblock your phone in the TV settings, then try again."</string>
    <string name="cant_connect_dialog_description_tablet">"Your tablet is blocked by the TV you're trying to connect to. Unblock your tablet in the TV settings, then try again."</string>
    <string name="cant_connect_dialog_title">"Can't connect"</string>
    <string name="casting_more_option_tooltip_text">More options</string>
    <string name="cdd_option_fullscreen">Full screen</string>
    <string name="cdd_option_multiview">Multi View</string>
    <string name="cdd_option_pipscreen">Picture-in-picture</string>
    <string name="cdd_option_screensize">Screen size</string>
    <string name="cdd_option_selectscreen">Select screen</string>
    <string name="channel_enter_hyphen">-</string>
    <string name="channel_enter_number_0">0</string>
    <string name="channel_enter_number_1">1</string>
    <string name="channel_enter_number_2">2</string>
    <string name="channel_enter_number_3">3</string>
    <string name="channel_enter_number_4">4</string>
    <string name="channel_enter_number_5">5</string>
    <string name="channel_enter_number_6">6</string>
    <string name="channel_enter_number_7">7</string>
    <string name="channel_enter_number_8">8</string>
    <string name="channel_enter_number_9">9</string>
    <string name="channel_enter_ok">OK</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_that_tv_software_description">"On the device you're connecting to, check for any available software updates and make sure you have the latest version. You can usually find this in Settings."</string>
    <string name="check_that_tv_software_title">Check that TV software is up to date</string>
    <string name="check_tv_blocked_description_for_phone">"On some TVs, when a phone requests connection, there's an option to block it. After that happens, the phone can no longer connect until it's removed from the list of blocked devices. Your TV may have a Device Connect Manager or a similar function in Settings where you can find a device list and check to make sure that your phone isn't blocked."</string>
    <string name="check_tv_blocked_description_for_tablet">"On some TVs, when a tablet requests connection, there's an option to block it. After that happens, the tablet can no longer connect until it's removed from the list of blocked devices. Your TV may have a Device Connect Manager or a similar function in Settings where you can find a device list and check to make sure that your tablet isn't blocked."</string>
    <string name="check_tv_blocked_title_for_phone">"Check on your TV that your phone isn't blocked"</string>
    <string name="check_tv_blocked_title_for_tablet">"Check on your TV that your tablet isn't blocked"</string>
    <string name="check_tv_input_source_description">On some TVs, you need to change the input source to a compatible setting such as Screen mirroring before Smart View can detect the TV.</string>
    <string name="check_tv_input_source_title">Check the TV input source</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="control_panel_btn_text_ratio">Ratio</string>
    <string name="control_panel_btn_text_return">Return</string>
    <string name="control_panel_btn_text_source">Source</string>
    <string name="control_panel_btn_text_tv_on">TV: On</string>
    <string name="dlg_ok">OK</string>
    <string name="help_blackscreen_body_text">"Your phone's screen will go dark while using Smart View. This reduces glare and increases battery life."</string>
    <string name="help_blackscreen_bottom_text">Swipe the screen or press the %s to use your phone. Double tap a notification icon to view the notification.</string>
    <string name="main_text_keypad">123</string>
    <string name="sec_roboto_regular_font_family">sec-roboto-regular</string>
    <string name="smart_mirroring_title">Smart View</string>
    <string name="text_channel_ch">CH</string>
    <string name="text_channel_ch_down">Channel down</string>
    <string name="text_channel_ch_up">Channel up</string>
    <string name="welcome_continue">Continue</string>
    <string name="welcome_intro_first_description">View your phone’s screen or play videos on a nearby TV.</string>
    <string name="welcome_intro_first_title">Show your phone on a TV</string>
    <string name="welcome_intro_third_description">View videos and photos from gallery on your TV in their original quality.</string>
    <string name="welcome_intro_third_title">High quality playback</string>
    <string name="welcome_permission_by_continuing_nearbyservice">By continuing, you allow these permissions, which are needed for Smart View to work correctly. You can manage these permissions in %1$sSettings%2$s.</string>
    <string name="welcome_permission_following_nearbyservice">The following permissions are required by the %1$s app which helps %2$s transfer content to your TV.</string>
    <string name="welcome_permission_location_all_the_time">%s (all the time)</string>
    <string name="welcome_permission_location_description">Used to search for nearby devices</string>
    <string name="welcome_permission_nearbydevices_description">Used to search for nearby devices</string>
</resources>