<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/channel_num_corners" android:layout_width="match_parent" android:layout_height="match_parent" android:paddingHorizontal="@dimen/chanel_keyboard_padding_horizontal" android:paddingVertical="@dimen/chanel_keyboard_padding_vertical"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:id="@id/text_edit_panel" android:layout_width="match_parent" android:layout_height="@dimen/chanel_keyboard_edit_height" android:paddingVertical="@dimen/chanel_keyboard_edit_padding">
        <EditText android:textSize="@dimen/chanel_keyboard_edit_text_size" android:textColor="@color/player_channel_keyboard_text_color" android:id="@id/channel_edit" android:background="@null" android:layout_width="@dimen/chanel_keyboard_edit_view_width" android:layout_height="match_parent" android:cursorVisible="false" android:maxLength="6" android:layout_alignParentTop="true" android:inputType="textMultiLine" android:fontFamily="sec" />
        <ImageButton android:id="@id/btn_channel_delete" android:background="?android:selectableItemBackgroundBorderless" android:clickable="false" android:layout_width="@dimen/chanel_keyboard_delete_icon_width" android:layout_height="@dimen/chanel_keyboard_delete_icon_height" android:layout_marginTop="@dimen/chanel_keyboard_delete_icon_margin_top" android:src="@drawable/ic_player_keypad_delete" android:scaleType="centerInside" android:contentDescription="@null" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <View android:background="#43000000" android:layout_width="match_parent" android:layout_height="@dimen/chanel_keyboard_divider_height" />
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/input_num_panel" android:paddingTop="@dimen/chanel_keyboard_key_pad_padding" android:layout_width="match_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0">
            <Button android:id="@id/btn_number_7" android:text="@string/channel_enter_number_7" style="@style/player_channel_keyboard_button" />
            <Button android:id="@id/btn_number_4" android:layout_marginTop="@dimen/chanel_keyboard_key_pad_icon_margin_top" android:text="@string/channel_enter_number_4" style="@style/player_channel_keyboard_button" />
            <Button android:id="@id/btn_number_1" android:layout_marginTop="@dimen/chanel_keyboard_key_pad_icon_margin_top" android:text="@string/channel_enter_number_1" style="@style/player_channel_keyboard_button" />
            <Button android:id="@id/btn_channel_hyphen" android:layout_marginTop="@dimen/chanel_keyboard_key_pad_icon_margin_top" android:text="@string/channel_enter_hyphen" style="@style/player_channel_keyboard_button" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:layout_marginStart="@dimen/chanel_keyboard_key_pad_group_margin_start">
            <Button android:id="@id/btn_number_8" android:text="@string/channel_enter_number_8" style="@style/player_channel_keyboard_button" />
            <Button android:id="@id/btn_number_5" android:layout_marginTop="@dimen/chanel_keyboard_key_pad_icon_margin_top" android:text="@string/channel_enter_number_5" style="@style/player_channel_keyboard_button" />
            <Button android:id="@id/btn_number_2" android:layout_marginTop="@dimen/chanel_keyboard_key_pad_icon_margin_top" android:text="@string/channel_enter_number_2" style="@style/player_channel_keyboard_button" />
            <Button android:id="@id/btn_number_0" android:layout_marginTop="@dimen/chanel_keyboard_key_pad_icon_margin_top" android:text="@string/channel_enter_number_0" style="@style/player_channel_keyboard_button" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:layout_marginStart="@dimen/chanel_keyboard_key_pad_group_margin_start">
            <Button android:id="@id/btn_number_9" android:text="@string/channel_enter_number_9" style="@style/player_channel_keyboard_button" />
            <Button android:id="@id/btn_number_6" android:layout_marginTop="@dimen/chanel_keyboard_key_pad_icon_margin_top" android:text="@string/channel_enter_number_6" style="@style/player_channel_keyboard_button" />
            <Button android:id="@id/btn_number_3" android:layout_marginTop="@dimen/chanel_keyboard_key_pad_icon_margin_top" android:text="@string/channel_enter_number_3" style="@style/player_channel_keyboard_button" />
            <Button android:id="@id/btn_channel_enter" android:layout_marginTop="@dimen/chanel_keyboard_key_pad_icon_margin_top" android:text="@string/channel_enter_ok" style="@style/player_channel_keyboard_button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
