<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/permission_contents_layout" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="@dimen/welcome_permission_description_text" android:textColor="@color/welcome_permission_following_ns_tv_text_color" android:id="@id/following_ns_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/welcome_permission_description_margin_bottom" android:text="@string/welcome_permission_following_nearbyservice" android:lineSpacingExtra="@dimen/welcome_text_line_space" android:fontFamily="sec" android:textFontWeight="400" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingTop="@dimen/welcome_permission_item_padding_top" android:paddingBottom="@dimen/welcome_permission_item_padding_bottom" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="@dimen/welcome_permission_item_icon_size" android:layout_height="@dimen/welcome_permission_item_icon_size" android:src="@drawable/ic_perm_group_location" android:tint="@color/welcome_permission_item_icon_tint" android:layout_marginEnd="@dimen/welcome_permission_item_icon_margin_end" />
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/welcome_permission_item_title_text" android:textColor="@color/welcome_permission_item_title_color" android:id="@id/location_alltime_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_permission_location_all_the_time" android:fontFamily="sec" android:textFontWeight="400" />
                <TextView android:textSize="@dimen/welcome_permission_item_description_text" android:textColor="@color/welcome_permission_item_description_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_permission_location_description" android:fontFamily="sec" android:textFontWeight="400" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingTop="@dimen/welcome_permission_item_padding_top" android:paddingBottom="@dimen/welcome_permission_item_padding_bottom" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/welcome_permission_nearby_iv" android:layout_width="@dimen/welcome_permission_item_icon_size" android:layout_height="@dimen/welcome_permission_item_icon_size" android:tint="@color/welcome_permission_item_icon_tint" android:layout_marginEnd="@dimen/welcome_permission_item_icon_margin_end" />
            <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/welcome_permission_item_title_text" android:textColor="@color/welcome_permission_item_title_color" android:id="@id/welcome_permission_nearby_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sec" android:textFontWeight="400" />
                <TextView android:textSize="@dimen/welcome_permission_item_description_text" android:textColor="@color/welcome_permission_item_description_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_permission_nearbydevices_description" android:fontFamily="sec" android:textFontWeight="400" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textSize="@dimen/welcome_permission_description_text" android:textColor="@color/welcome_permission_description_text_color" android:id="@id/continuing_ns_tv" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/welcome_permission_description_by_continuing_margin_top" android:text="@string/welcome_permission_by_continuing_nearbyservice" android:lineSpacingExtra="@dimen/welcome_text_line_space" android:fontFamily="sec" android:textFontWeight="400" />
    </LinearLayout>
</LinearLayout>
